--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.0",
     "element-ui": "^2.15.5",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
